--- a/app/components/chatbox/chatbox.html
+++ b/app/components/chatbox/chatbox.html
@@ -1,8 +1,8 @@
 <div class="chatbox">
     <div class="messages">
         <ul>
-            <li ng-repeat="msg in messages">
-
+            <li ng-repeat="msg in $ctrl.messages"
+                ng-bind="msg.message + ' - ' + msg.author">
             </li>
         </ul>
     </div>
