--- a/app/components/chatbox/chatbox.html
+++ b/app/components/chatbox/chatbox.html
@@ -1,12 +1,71 @@
-<div class="chatbox">
-    <div class="messages">
-        <ul>
-            <li ng-repeat="msg in $ctrl.messages"
-                ng-bind="msg.message + ' - ' + msg.author">
-            </li>
-        </ul>
-    </div>
-    <form action="">
+<md-content style="height: calc(100vh - 49px);" md-theme="altTheme">
+    <section>
+        <md-subheader class="md-primary">Unread Messages</md-subheader>
+        <md-list layout-padding>
+            <md-list-item class="md-3-line" ng-repeat="message in $ctrl.messages">
+                <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
+                <div class="md-list-item-text">
+                    <h3>{{message.what}}</h3>
+                    <h4>{{message.who}}</h4>
+                    <p>
+                        {{message.notes}}
+                    </p>
+                </div>
+            </md-list-item>
+        </md-list>
+    </section>
+    <section>
+        <md-subheader class="md-warn">Late Messages</md-subheader>
+        <md-list layout="column" layout-padding>
+            <md-list-item class="md-3-line" ng-repeat="message in $ctrl.messages">
+                <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
+                <div class="md-list-item-text">
+                    <h3>{{message.what}}</h3>
+                    <h4>{{message.who}}</h4>
+                    <p>
+                        {{message.notes}}
+                    </p>
+                </div>
+            </md-list-item>
+        </md-list>
+    </section>
+    <section>
+        <md-subheader>Read Messages</md-subheader>
+        <md-list layout="column" layout-padding>
+            <md-list-item class="md-3-line" ng-repeat="message in $ctrl.messages">
+                <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
+                <div class="md-list-item-text">
+                    <h3>{{message.what}}</h3>
+                    <h4>{{message.who}}</h4>
+                    <p>
+                        {{message.notes}}
+                    </p>
+                </div>
+            </md-list-item>
+        </md-list>
+    </section>
+    <section>
+        <md-subheader class="md-accent">Archived messages</md-subheader>
+        <md-list layout="column" layout-padding>
+            <md-list-item class="md-3-line" ng-repeat="message in $ctrl.messages">
+                <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
+                <div class="md-list-item-text">
+                    <h3>{{message.what}}</h3>
+                    <h4>{{message.who}}</h4>
+                    <p>
+                        {{message.notes}}
+                    </p>
+                </div>
+            </md-list-item>
+        </md-list>
+    </section>
 
-    </form>
-</div>
+    <md-button class="md-fab"
+        style="position: fixed; bottom: 20px; right: 20px;"
+        aria-label="add"
+        layout="row"
+        layout-align="center center"
+        ng-click="$ctrl.addMessage($event)">
+        <i class="material-icons">add</i>
+    </md-button>
+</md-content>
